--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -78,17 +78,20 @@
 			<div class="row">
 				<div class="col-xs-10 col-md-10">
 					<p>
-					When most TV shows explore the art, creation, and philosophy behind food in the kitchen, Label Drinkers engage the audience in a journey that digs in depth and beyond the kitchen inventions. By exploring eccentric consumption behaviours, the industry that supports it, and the variety of myths and legends covering this seasons prime beverage - Champagne.</p>
+					Label Drinkers invite the audience on a journey deep into and beyond the world of beverage, exploring the art, creation and philosophy behind what we drink. But Label Drinkers does not stop there. 
+					Label Drinkers will explore the eccentric consumption behaviours, the industry behind it and the variety of myths and legends covering this seasons prime beverage - Champagne.
 					<p>
-					The viewer will be introduced to the extraordinary excess that originates from the glamorous stories embracing Champagne, together with our recognized hosts experience everything down to the very nerdy details, satisfying the most prestigious taster or enthusiast.</p>				
+					The viewer will be introduced to the extraordinary excess and glamorous stories embracing Champagne. 
+					Together with our recognized hosts the viewers will experience everything down to the very nerdy details, satisfying the most prestigious taster and enthusiast.</p>				
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-10 col-md-10">			
-				<p style="color: orange">Label Drinkers fusion of education and entertainment invites the viewers into the journey of appreciating the best of both worlds.</p>
-				<p>Label Drinkers will engage the audience in a tour de force around the globe with it's exciting and humorous style on the quest to explore the world of Champagne. Finding our hosts revealing untold stories and busting myths, challenged by the best experts in their field, creating unexpected, controversial and thrilling situations - meeting producers, personalities, stars and celebrities in legendary venues and locations around the globe.</p>
-				<img src="../assets/img/list-placeholder.png" class="img-fluid" alt="">
-				<p>Exploring the ultimate Champagne experience in the travel-, hospitality- and gastronomical industry, while simultaneously covering historical revelations and trends that over centuries have cemented Champagne as the no.1 beverage of them all. </p>
+				<p style="color: orange">Label Drinkers fusion of education and entertainment brings the viewers on a journey where they will appreciate the best of both worlds.</p>
+				<p>Label Drinkers will engage the audience in a tour de force around the globe with it's exciting and humorous style on the quest to explore the world of Champagne. 
+					Our hosts will expose untold stories and busting myths, challenged by the best experts in their field, creating unexpected, controversial and thrilling situations - meeting producers, personalities, stars and celebrities in legendary venues and locations around the globe.</p>
+
+				<p>Label Drinkers explore the ultimate Champagne experience in the travel-, hospitality- and gastronomical industry, while simultaneously covering historical revelations and trends that over centuries have cemented Champagne as the no.1 beverage of them all. </p>
 				</div>
 			</div>
 		</section>
