--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 			</div>
 		</div>
 		<div class="row faded">
-			<div class="col-12 col-md-4 col-lg-3 pb2l">Business & Partnerships<br>
+			<div class="col-12 col-md-4 col-lg-3 pb2l">For Business & Partnerships<br>
 				<br><a href="mailto:info@pdgmg.com">info@pdgmg.com</a>
 				<br><a href="tel:+46727007070">+46 72 700 70 70</a>
 			</div>
