--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -121,7 +121,7 @@
 					<div class="proj-info">Josefine Rosengren Karpinski<br>Line Producer<br>
 						<a class="footer">&nbsp;</a></div>
 					<div class="img-container" style="background-image: url('../assets/images/josefine.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
-						 <span class="footer">SONY Pictures, Columbia Pictures, Monkberry, ACNE Film & Sommelier</span>
+						 <span class="footer">SONY Pictures, Monkberry, ACNE Film & Sommelier</span>
 				</div>
 				<div class="minimove col-lg-3 project-item">
 					<div class="proj-category tag faded"></div>
