--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -246,5 +246,16 @@
 	<script src="../assets/js/jquery-c=1524092400.js" defer="defer" type="text/javascript" charset="utf-8"></script>
 	<script src="../assets/js/jquery.lazy-c=1524092400.js" defer="defer" type="text/javascript" charset="utf-8"></script>
 	<script src="../assets/js/main-c=1524092400.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110940667-5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-110940667-5');
+</script>
+
+
 </body>
 </html>
