--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -99,6 +99,7 @@
 			<div class="row" id="prodteam">
 				<div class="col-lg-6">
 					<h2 class="h1">Production Team</h2>
+					<p>We have handpicked the production crew specific for the cinematic expression we’re creating for the series. Together the crew have extensive and collective experience from Endemol Shine, Warner Bros, SVT, SF, Sony pictures, Digital Domain, Technicolor, TV4-Group, Viasat...</p>
 				</div>
 				<div class="clearfix"></div>
 			</div>
