--- a/investors/index.html
+++ b/investors/index.html
@@ -112,7 +112,7 @@
 <div class="staticrypt-page">
     <div class="staticrypt-form">
         <div class="proj-info">
-            <h2 class="tag" style="text-align:left">Welcome to<br>Paradigm Group<br>Partnership<br>Login</h2>
+            <h2 class="tag" style="text-align:left">Welcome to<br>Paradigm Group<br>Investor<br>Relations</h2>
         </div>
 
         <hr class="staticrypt-hr" style="color: orange">
