--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -105,7 +105,7 @@
 			</div>
 			<div class="row"><div class="minimove col-lg-3 project-item">
 				<div class="proj-category tag faded"></div>
-					<div class="proj-info">Mikael Flodell<br>Series Director<br>
+					<div class="proj-info">Mikael Flodell<br>Series Producer<br>
 						<a class="footer" href="https://www.imdb.com/name/nm1636869">IMDb</a></div>
 					<div class="img-container" style="background-image: url('../assets/images/flodell.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
 						 <span class="footer">Producer and storytelling strengths with proven work beyond the traditional.</span>
