--- a/onepager/index.html
+++ b/onepager/index.html
@@ -24,7 +24,7 @@
 				<script>
 					if (typeof fuel == 'undefined') fuel = {}
 				</script>
-				<link href="..assets/css/fuel_inline.css?c=1524092400" media="all" rel="stylesheet" />
+				<link href="../assets/css/fuel_inline.css?c=1524092400" media="all" rel="stylesheet" />
     <style>
         .staticrypt-hr {
             margin-top: 20px;
