--- a/terms.html
+++ b/terms.html
@@ -112,7 +112,7 @@
           <div class="col-12 col-md-6">
             <p class="minh">Newsletters and occasional mailings are made to those of the users, who have given their
               prior consent to it. If you do not wish to continue to receive such mailings or would like to subscribe
-              to them, please contact office@anagrama.ro</p>
+              to them, please contact info@pdgmg.com</p>
           </div>
         </div>
       </div>
