--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -98,11 +98,11 @@
 	<section class="container-fluid">
 			<div class="row" id="prodteam">
 				<div class="col-lg-8">
-					<h2 class="h1">Production Team</h2>
+					<h2 class="h1">Cinematic expression</h2>
 					<p>We have handpicked the production crew specific for the cinematic expression we’re creating for the series. Together the crew have extensive and collective experience from Endemol Shine, Warner Bros, SVT, SF, Sony pictures, Digital Domain, Technicolor, TV4-Group, Viasat...</p>
 				</div>
 				<div class="clearfix"></div>
-			</div>
+			</div><!--
 			<div class="row"><div class="minimove col-lg-3 project-item">
 				<div class="proj-category tag faded"></div>
 					<div class="proj-info">Mikael Flodell<br>Series Producer<br>
@@ -152,7 +152,7 @@
 					<div class="img-container" style="background-image: url('../assets/images/andreas.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
 						 <span class="footer">Best Sommelier of the World 2007, Ruinart European Sommelier 2004, Meilleur Sommelier de Suède 2003...</span>
 				</div>
-			</div>
+			</div>-->
 		</section>
 	
 	<section class="container-fluid">
