--- a/index.html
+++ b/index.html
@@ -96,14 +96,39 @@
 						 class="img-fluid" alt=""></div>
 						 <p class="footer"><br>Adding 20 years additional experience with several startups and more recently mastering Digital Transformation in various businesses, Jürgen have a long reportoar of founding forefront companies that creates innovate products while also re-shaping classic businesses with the use of new methodologies.</p>
 					</div>
+			</div>
+			<div class="row">
 					<div class="minimove col-lg-4 project-item">
 							<div class="proj-category tag"></div>
-							<div class="proj-info">"Your name here"<br>Sales & Marketing Director</div>
+							<div class="proj-info">Appointed<br>Sales Director</div>
 							<div class="img-container" style="background-image: url('assets/img/list-placeholder.png');"><img src="assets/img/list-placeholder.png"
 								 class="img-fluid" alt=""></div>
-								 <p class="footer"><br>We are looking for a sales & marketing director with a track record in deals and distribution across the industry.</p>
+								 <p class="footer"><br>TBR<br>Former Head of Accqusitions, International Network with +20 years experience.</p>
 							</div>
+							<div class="minimove col-lg-4 project-item">
+									<div class="proj-category tag"></div>
+									<div class="proj-info">Appointed<br>Marketing & Social Media Director (CH)</div>
+									<div class="img-container" style="background-image: url('assets/img/list-placeholder.png');"><img src="assets/img/list-placeholder.png"
+										 class="img-fluid" alt=""></div>
+										 <p class="footer"><br>TBR<br>Senior Marketing Professional, ex Apple TBWA/Media Arts Lab, Creative Director & Copywriter.</p>
+									</div>
 				</div>
+				<div class="row">
+						<div class="minimove col-lg-4 project-item">
+								<div class="proj-category tag"></div>
+								<div class="proj-info">Appointed<br>Head of Partnerships</div>
+								<div class="img-container" style="background-image: url('assets/img/list-placeholder.png');"><img src="assets/img/list-placeholder.png"
+									 class="img-fluid" alt=""></div>
+									 <p class="footer"><br>To be revealed.</p>
+								</div>
+								<div class="minimove col-lg-4 project-item">
+										<div class="proj-category tag"></div>
+										<div class="proj-info">Appointed<br>Head of Product Development (FR)</div>
+										<div class="img-container" style="background-image: url('assets/img/list-placeholder.png');"><img src="assets/img/list-placeholder.png"
+											 class="img-fluid" alt=""></div>
+											 <p class="footer"><br>To be revealed.</p>
+										</div>
+					</div>
 		</section>
 	
 	<section class="container-fluid">
@@ -179,7 +204,7 @@
 		<div class="container-fluid">
 			<hr class="spacer">
 			<div class="row">
-				<div class="col-lg-3">©2018, Paradigm Group.</div>
+				<div class="col-lg-3">©2019, Paradigm Group.</div>
 				<div class="col-lg-3"><a href="terms.html">Terms and conditions</a></div>
 				<div class="col-lg-3"><a href="cookie.html">Cookie policy</a></div>
 				<div class="col-lg-3"><a href="#top" class="gotop"><svg version="1.1" xmlns="https://www.w3.org/2000/svg"
