--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							<div class="proj-info">Appointed<br>Sales Director</div>
 							<div class="img-container" style="background-image: url('assets/img/list-placeholder.png');"><img src="assets/img/list-placeholder.png"
 								 class="img-fluid" alt=""></div>
-								 <p class="footer"><br>TBR<br>Former Head of Accqusitions, International Network with +20 years experience.</p>
+								 <p class="footer"><br>TBR<br>Former Head of International Acquisitions at major network with +20 years experience.</p>
 							</div>
 							<div class="minimove col-lg-4 project-item">
 									<div class="proj-category tag"></div>
