--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
 			<div class="col-12 col-md-4 col-lg-3 pb2l">For Business & Partnerships<br>
 				<br><a href="mailto:info@pdgmg.com">info@pdgmg.com</a>
 				<br><a href="tel:+46727007070">+46 72 700 70 70</a>
+				<br><a href="/partnerships">/partnerships</a>
 			</div>
 			<div class="col-12 col-md-4 col-lg-3 pb2l">Come visit us<br>
 			
