--- a/about.html
+++ b/about.html
@@ -41,14 +41,13 @@
 						<rect style="fill:none;" width="40" height="40" />
 					</g>
 				</svg></a><a id="menu-home" href="index.html">A</a>
-			<ul class="nav">
-				<li><a href="labeldrinkers.html">Label Drinkers</a></li>
-				<li><a href="#prodteam">Production Team</a></li>
-				<li><a href="about.html">About Us</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-			<div class="menu-info"><a href="tel:+46727007070" class="fs30">+46 72 700 70 70</a><br><a href="https://goo.gl/maps/ENnixTCoSjn"
-				 target="_blank">Twenty Studios<br>Rådmansgatan 20, Stockholm, Sweden</a></div>
+				<ul class="nav">
+					<li><a href="/">About</a></li>
+					<li><a href="labeldrinkers/">Formats</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+				<div class="menu-info"><a href="mailto:info@pdgmg.com" class="fs30">info@pdgmg.com</a><br><a href="tel:+46727007070" class="fs30">+46 72 700 70 70</a><br><a href="https://goo.gl/maps/Jo3cg4GkaCC2"
+					target="_blank">c/o Twenty Studios<br>Rådmansgatan 20, Stockholm, Sweden</a></div>
 		</nav>
 	</header>
 	<section class="container-fluid bigger">
@@ -162,13 +161,14 @@
 			</div>
 		</div>
 		<div class="row faded">
-			<div class="col-12 col-md-4 col-lg-3 pb2l">Business & Partnering<br>
-				
+			<div class="col-12 col-md-4 col-lg-3 pb2l">For Business & Partnerships<br>
+				<br><a href="mailto:info@pdgmg.com">info@pdgmg.com</a>
 				<br><a href="tel:+46727007070">+46 72 700 70 70</a>
+				<br><a href="/partnerships">/partnerships</a>
 			</div>
 			<div class="col-12 col-md-4 col-lg-3 pb2l">Come visit us<br>
 			
-				<br><a href="goog.le">Twenty Studios<br>Rådmansgatan 20<br>Stockholm, Sweden</a>
+				<br><a href="https://goo.gl/maps/Jo3cg4GkaCC2" target="_blank">c/o Twenty Studios<br>Rådmansgatan 20<br>Stockholm, Sweden</a>
 			</div>
 			<div class="col-12 col-md-4 col-lg-6 text-right clockc"><span id="clock"></span></div>
 		</div>
@@ -206,11 +206,11 @@
 		<div class="container-fluid">
 			<hr class="spacer">
 			<div class="row">
-				<div class="col-lg-3">©2018, Paradigm Group.</div>
+				<div class="col-lg-3">©2019, Paradigm Group.</div>
 				<div class="col-lg-3"><a href="terms.html">Terms and conditions</a></div>
 				<div class="col-lg-3"><a href="cookie.html">Cookie policy</a></div>
-				<div class="col-lg-3"><a href="#top" class="gotop"><svg version="1.1" xmlns="http://www.w3.org/2000/svg"
-						 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;"
+				<div class="col-lg-3"><a href="#top" class="gotop"><svg version="1.1" xmlns="https://www.w3.org/2000/svg"
+						 xmlns:xlink="https://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;"
 						 xml:space="preserve">
 							<g>
 								<g>
@@ -222,58 +222,21 @@
 			</div>
 		</div>
 	</footer>
-	<div id="dp">
-		<div class="container-fluid"><a id="close-dp"><svg class="svg-icon" version="1.1" xmlns="http://www.w3.org/2000/svg"
-				 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 40 40" style="enable-background:new 0 0 40 40;"
-				 xml:space="preserve">
-					<g>
-						<g>
-							<polygon style="fill:#18191D;" points="34.8,6.6 33.4,5.2 20,18.6 6.6,5.2 5.2,6.6 18.6,20 5.2,33.4 6.6,34.8 20,21.4 33.4,34.8 34.8,33.4 21.4,20 " />
-						</g>
-						<rect x="0" style="fill:none;" width="40" height="40" />
-					</g>
-				</svg></a>
-			<div class="row">
-				<div class="col-xs-10 col-lg-8">
-					<h4>Data <br>protection</h4>Anagrama SRL is registered as personal data operator in the Registry of the National
-					Supervisory Authority for Personal Data Protection under no. 38201.<br>By accessing this site, you agree that
-					Anagrama has the right to process your personal data disclosed as a result of using the Service by the User
-					according to Terms and Privacy policy.
-				</div>
-			</div>
-		</div>
-	</div>
 	<div id="mmol"></div>
 	<script src="assets/js/jquery-c=1524092400.js" defer="defer" type="text/javascript" charset="utf-8"></script>
 	<script src="assets/js/jquery.lazy-c=1524092400.js" defer="defer" type="text/javascript" charset="utf-8"></script>
 	<script src="assets/js/main-c=1524092400.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110940667-5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-	<script src="https://www.anagrama.ro/cms/modules/fuel/assets/js/fuel/fuel_inline.min.js?c=1524092400" type="text/javascript"
-	 charset="utf-8"></script>
-	<div class="__fuel__" id="__fuel_edit_bar__">
-		<form action="https://www.anagrama.ro/cms/pages/ajax_page_edit/" method="post" id="__fuel_edit_bar_form__">
-			<div class="buttonbar buttonbar_notop">
-				<ul>
-					<li class="start round exposed"><a href="#" id="__fuel_page_toolbar_toggle__" class="ico ico_fuel" title="Toggle toolbar display"></a></li>
-					<li> &nbsp;<select name="others" id="__fuel_page_others__">
-							<option value="" label="Other pages...">Other pages...</option>
-							<option value="contact" label="contact">contact</option>
-							<option value="cookie" label="cookie">cookie</option>
-							<option value="home" label="home">home</option>
-							<option value="privacy" label="privacy">privacy</option>
-							<option value="profile" label="profile">profile</option>
-							<option value="projects/moovel-app" label="projects/moovel-app">projects/moovel-app</option>
-							<option value="projects/moovel-identity" label="projects/moovel-identity">projects/moovel-identity</option>
-							<option value="terms" label="terms">terms</option>
-						</select></li>
-					<li class="txt"><a href="https://www.anagrama.ro/cms/pages/edit/1?lang=english" title="Back to Admin">Back to
-							Admin</a></li>
-					<li class="txt"><a href="page_router.html" title="Logout of CMS admin">Logout</a></li>
-				</ul>
-				<div class="clear"></div>
-			</div><input type="hidden" name="id" value="1" /><input type="hidden" name="location" value="home" />
-		</form>
-	</div>
+  gtag('config', 'UA-110940667-5');
+</script>
+
+
 </body>
 
 </html>
