--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</svg></a><a id="menu-home" href="/">PDGMG</a>
 			<ul class="nav">
 				<li><a href="/">About</a></li>
-				<li><a href="labeldrinkers/">Formats</a></li>
+				<li><a href="#formats">Formats</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 			<div class="menu-info"><a href="mailto:info@pdgmg.com" class="fs30">info@pdgmg.com</a><br><a href="tel:+46727007070" class="fs30">+46 72 700 70 70</a><br><a href="https://goo.gl/maps/Jo3cg4GkaCC2"
@@ -59,10 +59,8 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-10 col-md-10">
-				<p>We are believers of the never satisfying moment of status quo. Things change, everything change, and these days TV audience have become VOD consumers. We believe in content that attracts, content that gives.</p>
-				&nbsp;
-				<p>We create content and series using a unique workflow to create extraordinaire elegance. By using the latest and greatest in technology, together with a lean startup mentality we radically change the traditional workflow to a more future proof and effective production, that also counts for our creations.</p>
-			</div>
+				<p>Things change, everything change, and these days TV audience have become VOD consumers. We create content that attracts and content that gives in any platform.</p>
+<p>In the creation process our unique workflow helps us create extraordinaire elegance. Using the latest and greatest in technology with a lean startup mentality we radically change and challenge the traditional workflows.</p></div>
 			</div>
 		</div>
 	</section>
@@ -100,39 +98,23 @@
 			<div class="row">
 					<div class="minimove col-lg-4 project-item">
 							<div class="proj-category tag"></div>
-							<div class="proj-info">Appointed<br>Sales Director</div>
+							<div class="proj-info">Katarina Eriksson<br>Sales Director & Distribution</div>
 							<div class="img-container" style="background-image: url('assets/img/list-placeholder.png');"><img src="assets/img/list-placeholder.png"
 								 class="img-fluid" alt=""></div>
-								 <p class="footer"><br>TBR<br>Former Head of International Acquisitions at major network with +20 years experience.</p>
+								 <p class="footer"><br>Former Head of International Acquisitions at major network with +20 years experience.</p>
 							</div>
 							<div class="minimove col-lg-4 project-item">
 									<div class="proj-category tag"></div>
-									<div class="proj-info">Appointed<br>Marketing & Social Media Director (CH)</div>
-									<div class="img-container" style="background-image: url('assets/img/list-placeholder.png');"><img src="assets/img/list-placeholder.png"
+									<div class="proj-info">Josefine Rosengren<br>Line Producer</div>
+									<div class="img-container" style="background-image: url('assets/images/josefine.jpg');"><img src="assets/img/list-placeholder.png"
 										 class="img-fluid" alt=""></div>
-										 <p class="footer"><br>TBR<br>Senior Marketing Professional, ex Apple TBWA/Media Arts Lab, Creative Director & Copywriter.</p>
+										 <p class="footer"><br>More than 20 years experience with several productions from SONY Pictures, SVT, TV4, Viasat, ACNE Film to name a few.</p>
 									</div>
 				</div>
-				<div class="row">
-						<div class="minimove col-lg-4 project-item">
-								<div class="proj-category tag"></div>
-								<div class="proj-info">Appointed<br>Head of Partnerships</div>
-								<div class="img-container" style="background-image: url('assets/img/list-placeholder.png');"><img src="assets/img/list-placeholder.png"
-									 class="img-fluid" alt=""></div>
-									 <p class="footer"><br>To be revealed.</p>
-								</div>
-								<div class="minimove col-lg-4 project-item">
-										<div class="proj-category tag"></div>
-										<div class="proj-info">Appointed<br>Head of Product Development (FR)</div>
-										<div class="img-container" style="background-image: url('assets/img/list-placeholder.png');"><img src="assets/img/list-placeholder.png"
-											 class="img-fluid" alt=""></div>
-											 <p class="footer"><br>To be revealed.</p>
-										</div>
-					</div>
 		</section>
 	
 	<section class="container-fluid">
-		<div class="row" id="projects">
+		<div class="row" id="formats">
 			<div class="col-lg-6">
 				<h2 class="h1">Formats</h2>
 			</div>
@@ -141,7 +123,7 @@
 		<div class="row">
 			<a href="labeldrinkers/" class="minimove col-lg-6 project-item">
 				<div class="proj-category tag faded">ENTERTAINMENT<br>[EDUTAINMENT]</div>
-				<div class="proj-info">Label Drinkers<br>The gastronomical equivalent to "Top Gear"</div>
+				<div class="proj-info"><p>Label Drinkers</p>The gastronomical equivalent to "Top Gear"<p>Not yet another TV format</p><br>Label Drinkers is a cinematic gastronomy and beverage show that explores everything beyond food artsy and kitchen creations.</div>
 				<div class="video">
 					<video playsinline autoplay muted loop>
 					<source src="assets/videos/loops.mp4" type="video/mp4">
@@ -151,6 +133,19 @@
 				</div>
 			</a>
 	</div>
+	<div class="row">
+		<a href="labeldrinkers/" class="minimove col-lg-6 project-item">
+			<div class="proj-category tag faded">ENTERTAINMENT<br>[UNSCRIPTED REALITY]</div>
+			<div class="proj-info"><p>The Amusement Park</p>Taking the audience on a happy and fun show that also reveals tensions and excitement with thrilling moments.<p>A Reality show in a world of Excitements</p><br>The Amusement Park is a reality show where we follow the exiting elements that forms an amusepent park in a world of adrenaline pushing rides to the stress and conflicts behind the scenes during on stage performances also including the staff that's been around for ages and the juniors doing their first days of work not forgetting the visitors that comes from all over the world.</div>
+			<div class="video" style="display:none">
+				<video playsinline autoplay muted loop>
+				<source src="assets/videos/loops.mp4" type="video/mp4">
+					<param name="allowFullScreen" value="true"/>
+					<param name="allowscriptaccess" value="always"/>
+				</video>
+			</div>
+		</a>
+</div>
 	</section>
 <a name="contact" id="contact"></a>
 	<section class="container-fluid nopb">
