--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -64,7 +64,7 @@
 						<li class="faded">Unscripted</li>
 						<li>ENTERTAINMENT</li>
 						<li>FACTUAL</li>
-						<li class="faded">2018</li>
+						<li class="faded">2019 -</li>
 					</ul>
 				</div>
 				<div class="col-md-3">
@@ -74,18 +74,24 @@
 						<li class="faded">Hospitality</li>
 					</ul>
 				</div>
+				<div class="col-md-3">
+						<ul>
+							<li class="faded">ENGLISH</li>
+							<li class="faded">45MIN EP</li>
+							<li class="faded">8EP SE01</li>
+						</ul>
+					</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-8 col-md-8">
-					<p>
-					Label Drinkers invite the audience on a journey deep into and beyond the world of beverage, exploring the art, creation and philosophy behind what we drink. But Label Drinkers does not stop there. 
-					Label Drinkers will explore the eccentric consumption behaviours, the industry behind it and the variety of myths and legends covering this seasons prime beverage - Champagne.
-					<p>
-					The viewer will be introduced to the extraordinary excess and glamorous stories embracing Champagne. 
-					Together with our recognized hosts the viewers will experience everything down to the very nerdy details, satisfying the most prestigious taster and enthusiast.</p>				
+					<p><img src="../assets/images/philip3.jpg" style="width: 400px;margin-right:50px;"><img src="../assets/images/ines3.jpg" style="width: 400px"></p>
+					<p>&nbsp;</p>
+					<p>Label Drinkers is a cinematic gastronomy and beverage show that explores everything beyond food artsy and kitchen creations.</p>
+					<p>Our hosts explore the global and eccentric consumption behaviours, the fascinating industry that supports it, and the variety of myths and legends surrounding a range of famous beverages.</p>
+					<p style="color: orange">A journey where they meet not only passionate experts but celebrities, winemakers, chefs and other characters, all with unique stories to tell.</p>				
 				</div>
 			</div>
-			<div class="row">
+			<div class="row" style="display:none">
 				<div class="col-xs-8 col-md-8">			
 				<p style="color: orange">Label Drinkers fusion of education and entertainment brings the viewers on a journey where they will appreciate the best of both worlds.</p>
 				<p>Label Drinkers will engage the audience in a tour de force around the globe with it's exciting and humorous style on the quest to explore the world of Champagne. 
@@ -95,66 +101,69 @@
 				</div>
 			</div>
 		</section>
+		<section class="container-fluid">
+			<div class="row" id="experts">
+				<div class="col-lg-8">
+					<h2 class="h1">Experts on all levels</h2>
+					<p><img src="../assets/images/rj3.jpg" style="width: 100%"></p>
+<span style="color: grey">"I am triggered by the fact that this is not a traditional food or wine show but something completely different. With speed and variety, this show captures the viewers at the same time as it teaches and hopefully becomes rewarding for the audience in my favorite subject Champagne." - Richard Juhlin</span>
+<p>&nbsp;</p>
+<p>Not just do we have our fantastic hosts in front of the camera, we also have the world known Richard Juhlin to assist our hosts in selected elements trough out the entire series.</p>
+<p>
+Behind the cameras we have handpicked a team of sommelier world champions, decanter world wine awards judges, rare fine-wine experts and a few more to assure the viewers will get the absolute cremé de la cremé of knowledge, expertise and high quality discussions all over the series.
+</p>
+				</div>
+				<div class="clearfix"></div>
+			</div>
+		</section>
+		<section class="container-fluid">
+			<div class="row" id="challenges">
+				<div class="col-lg-8">
+					<h2 class="h1">Dynamic elements</h2>
+					<video playsinline autoplay muted loop style="width: 90%">
+							<source src="../assets/videos/timeline.mp4" type="video/mp4">
+							  <param name="allowFullScreen" value="false"/>
+							  <param name="allowscriptaccess" value="always"/>
+					</video>
+					<p>&nbsp;</p>
+<p>Challenges and events are introduced as valiant, gripping and brave add-ons to a traditional story telling. Each episode contains non-repeating elements that gives the audience a unique dynamic experience for each episode.</p>
+
+<p>We follow our charismatic hosts vibrant yet contrasting views in the global hunt for unique locations, producer stories, amazing venues, high ranking restaurants and exclusive clubs that are highly regarded and associated with some of the most recognised prestige beverage brands in the world.</p>
+				</div>
+				<div class="clearfix"></div>
+			</div>
+		</section>
+		<section class="container-fluid">
+			<div class="row" id="audience">
+				<div class="col-lg-8">
+					<h2 class="h1">Made for a global audience</h2>
+<p>The series will be in English with our focus on global reach also targeting global VOD distributors. We will take the audience on a dream like escapade revealing stories and facts from any culture around the globe, from the glamour of the rich and famous to the passionate hardworking producers with their daily challenges. 
+<p>Like the element where our hosts hunts down the worlds most expensive Champagne. A journey that will take us from Formula One races to three-star restaurants chefs and sommeliers to the cellars of rare and hidden wine collections.</p>
+</div>
+				<div class="clearfix"></div>
+			</div>
+		</section>
 	<section class="container-fluid">
 			<div class="row" id="prodteam">
 				<div class="col-lg-8">
 					<h2 class="h1">Cinematic expression</h2>
-					<p>We have handpicked the production crew specific for the cinematic expression we’re creating for the series. Together the crew have extensive and collective experience from Endemol Shine, Warner Bros, SVT, SF, Sony pictures, Digital Domain, Technicolor, TV4-Group, Viasat...</p>
+					<p>We have handpicked the production crew specifically for the cinematic expression we develop for the series.</p>
+					<p>The crew we have brought together have extensive and collective experience from Endemol Shine, Warner Bros, SVT, SF, Sony pictures, Digital Domain, Technicolor, TV4-Group, Viasat to name a few.</p>
 				</div>
 				<div class="clearfix"></div>
-			</div><!--
-			<div class="row"><div class="minimove col-lg-3 project-item">
-				<div class="proj-category tag faded"></div>
-					<div class="proj-info">Mikael Flodell<br>Series Producer<br>
-						<a class="footer" href="https://www.imdb.com/name/nm1636869">IMDb</a></div>
-					<div class="img-container" style="background-image: url('../assets/images/flodell.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
-						 <span class="footer">Producer and storytelling strengths with proven work beyond the traditional.</span>
-				</div>
-				<div class="minimove col-lg-3 project-item">
-					<div class="proj-category tag faded"></div>
-					<div class="proj-info">Roy Rossovitch<br>DOP & Cinematographer<br>
-						<a class="footer" href="https://www.imdb.com/name/nm2627488">IMDb</a></div>
-					<div class="img-container" style="background-image: url('../assets/images/roy.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
-						 <span class="footer">Cinematographer that travels the world to do feature films, global documentaries & series.</span>
-				</div>
-				<div class="minimove col-lg-3 project-item">
-					<div class="proj-category tag faded"></div>
-					<div class="proj-info">Josefine Rosengren Karpinski<br>Line Producer<br>
-						<a class="footer">&nbsp;</a></div>
-					<div class="img-container" style="background-image: url('../assets/images/josefine.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
-						 <span class="footer">SONY Pictures, Monkberry, ACNE Film & Sommelier</span>
-				</div>
-				<div class="minimove col-lg-3 project-item">
-					<div class="proj-category tag faded"></div>
-					<div class="proj-info">Bernt Ekelund<br>Supervising Sound Editor<br>
-						<a class="footer" href="https://www.imdb.com/name/nm0252417">IMDb</a></div>
-					<div class="img-container" style="background-image: url('../assets/images/bernte.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
-						 <span class="footer">25 years experience and involved in most drama productions in Sweden.</span>
-				</div>
-				<div class="minimove col-lg-3 project-item">
-					<div class="proj-category tag faded"></div>
-					<div class="proj-info">Todd Daugherty<br>VFX Supervisor<br>
-						<a class="footer" href="https://www.imdb.com/name/nm1562987">IMDb</a></div>
-					<div class="img-container" style="background-image: url('../assets/images/todd.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
-						 <span class="footer">Paradox Interactive, Digital Domain, Technicolor, Blur Studios</span>
-				</div>
-				<div class="minimove col-lg-3 project-item">
-					<div class="proj-category tag faded"></div>
-					<div class="proj-info">Björnstierne Antonson<br>Editorial & Expert<br>
-						<a class="footer">&nbsp;</a></div>
-					<div class="img-container" style="background-image: url('../assets/images/bj.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
-						 <span class="footer">The Champagne Sommelier, Swedish Sommelier Champion 2003, Decanter World Wine Awards Judge.</span>
-				</div>
-				<div class="minimove col-lg-3 project-item">
-					<div class="proj-category tag faded"></div>
-					<div class="proj-info">Andreas Larsson<br>Editorial & Expert<br>
-						<a class="footer">&nbsp;</a></div>
-					<div class="img-container" style="background-image: url('../assets/images/andreas.jpg');"><img src="../assets/img/list-placeholder.png" class="img-fluid" alt=""></div>
-						 <span class="footer">Best Sommelier of the World 2007, Ruinart European Sommelier 2004, Meilleur Sommelier de Suède 2003...</span>
-				</div>
-			</div>-->
+			</div>
 		</section>
-	
+		<section class="container-fluid">
+			<div class="row" id="partners">
+				<div class="col-lg-8">
+					<h2 class="h1">Partners</h2>
+<p>Throughout the series we will visit a number of producers and brands. Since we like to engage and co-create our stories we invite you to become a partner, below are the first partners to the series.</p>
+<p>Get in contact with us to hear more about our innovative partnerships and how you can take part.</p>
+					<img src="../assets/images/carbon.png" style="width: 300px"><img src="../assets/images/legras.png" style="width: 300px"><img src="../assets/images/tattinger.png" style="width: 300px"><img src="../assets/images/diebolt.png" style="width: 300px"><img src="../assets/images/lancelot.png" style="width: 300px"><span style="width: 300px;padding-left: 50px;border:"><a href="mailto:info@pdgmg.com?subject=Partnership"><u>Partnerships available</u></a></span>
+</div>
+				<div class="clearfix"></div>
+			</div>
+		</section>
 	<section class="container-fluid">
 		<div class="row">
 			<div class="coming col-lg-4">
