--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -108,9 +108,9 @@
 					<p><img src="../assets/images/rj3.jpg" style="width: 100%"></p>
 <span style="color: grey">"I am triggered by the fact that this is not a traditional food or wine show but something completely different. With speed and variety, this show captures the viewers at the same time as it teaches and hopefully becomes rewarding for the audience in my favorite subject Champagne." - Richard Juhlin</span>
 <p>&nbsp;</p>
-<p>Not just do we have our fantastic hosts in front of the camera, we also have the world known Richard Juhlin to assist our hosts in selected elements trough out the entire series.</p>
+<p>Not just do we have our fantastic hosts in front of the camera, we also have the world-renowned Richard Juhlin to assist our hosts in selected elements trough out the entire series.</p>
 <p>
-Behind the cameras we have handpicked a team of sommelier world champions, decanter world wine awards judges, rare fine-wine experts and a few more to assure the viewers will get the absolute cremé de la cremé of knowledge, expertise and high quality discussions all over the series.
+Behind the cameras we have handpicked a team of sommelier world champions, decanter world wine awards judges, rare fine-wine experts and more to assure the viewers will get the absolute crème de la crème of knowledge, expertise and high quality discussions all over the series.
 </p>
 				</div>
 				<div class="clearfix"></div>
@@ -126,7 +126,7 @@ Behind the cameras we have handpicked a team of sommelier world champions, decan
 							  <param name="allowscriptaccess" value="always"/>
 					</video>
 					<p>&nbsp;</p>
-<p>Challenges and events are introduced as valiant, gripping and brave add-ons to a traditional story telling. Each episode contains non-repeating elements that gives the audience a unique dynamic experience for each episode.</p>
+<p>Challenges and events are introduced as valiant, gripping and brave add-ons to a traditional story telling. Each episode contains non-repeating element order that gives the audience a unique and dynamic experience for each episode.</p>
 
 <p>We follow our charismatic hosts vibrant yet contrasting views in the global hunt for unique locations, producer stories, amazing venues, high ranking restaurants and exclusive clubs that are highly regarded and associated with some of the most recognised prestige beverage brands in the world.</p>
 				</div>
@@ -137,8 +137,8 @@ Behind the cameras we have handpicked a team of sommelier world champions, decan
 			<div class="row" id="audience">
 				<div class="col-lg-8">
 					<h2 class="h1">Made for a global audience</h2>
-<p>The series will be in English with our focus on global reach also targeting global VOD distributors. We will take the audience on a dream like escapade revealing stories and facts from any culture around the globe, from the glamour of the rich and famous to the passionate hardworking producers with their daily challenges. 
-<p>Like the element where our hosts hunts down the worlds most expensive Champagne. A journey that will take us from Formula One races to three-star restaurants chefs and sommeliers to the cellars of rare and hidden wine collections.</p>
+<p>The series will be in English with our focus on global reach also targeting global VOD distributors. We will take the audience on a dream like escapade revealing stories and facts from any culture around the globe; from the glamour of the rich and famous to the passionate hardworking producers with their daily challenges. 
+<p>Like the element where our host hunts down the worlds most expensive champagne. A journey that will take us from Formula One races to three-star restaurants chefs and sommeliers to the cellars of rare and hidden wine collections.</p>
 </div>
 				<div class="clearfix"></div>
 			</div>
