--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -105,7 +105,7 @@
 			<div class="row" id="experts">
 				<div class="col-lg-8">
 					<h2 class="h1">Experts on all levels</h2>
-					<p><img src="../assets/images/rj3.jpg" style="width: 100%"></p>
+					<p><img src="../assets/images/rj3.png" style="width: 100%"></p>
 <span style="color: grey">"I am triggered by the fact that this is not a traditional food or wine show but something completely different. With speed and variety, this show captures the viewers at the same time as it teaches and hopefully becomes rewarding for the audience in my favorite subject Champagne." - Richard Juhlin</span>
 <p>&nbsp;</p>
 <p>Not just do we have our fantastic hosts in front of the camera, we also have the world-renowned Richard Juhlin to assist our hosts in selected elements trough out the entire series.</p>
@@ -120,7 +120,7 @@ Behind the cameras we have handpicked a team of sommelier world champions, decan
 			<div class="row" id="challenges">
 				<div class="col-lg-8">
 					<h2 class="h1">Dynamic elements</h2>
-					<video playsinline autoplay muted loop style="width: 90%">
+					<video playsinline autoplay muted loop style="width: 90%;">
 							<source src="../assets/videos/timeline.mp4" type="video/mp4">
 							  <param name="allowFullScreen" value="false"/>
 							  <param name="allowscriptaccess" value="always"/>
